# UAFTI-ChessAI

./: .gitignore  CMakeLists.txt  ChessAI.cpp  ChessAI.rc  ClassicBitBoard.cpp  ClassicBitBoard.h  EvalAgents.cpp  EvalAgents.h  Limits.cpp  Limits.h  MagicHash.h  MagicPext.h  PerfT.cpp  PerfT.h  Polyglot.cpp  Polyglot.h  README.md  SearchAgents.cpp  SearchAgents.h  TranspositionTable.cpp  TranspositionTable.h  UAFTI-ChessAI.h  UCI.cpp  UCI.h  UCIOptions.cpp  UCIOptions.h  resource.h
src/: EvalAgents.h  SearchAgents.h  TranspositionTable.h
src/Agents/: EvalAgents.cpp  EvalAgents.h  MovePicker.cpp  MovePicker.h  Ponder.cpp  Ponder.h  SearchAgents.cpp  SearchAgents.h  TranspositionTable.cpp  TranspositionTable.h
src/GUI/: CMakeLists.txt  ChessGUI.cpp  ChessGUI.h
src/UCI/: Limits.cpp  Limits.h  PerfT.cpp  PerfT.h  UCI.cpp  UCI.h  UCIOptions.cpp  UCIOptions.h
src/chess/: ClassicBitBoard.cpp  ClassicBitBoard.h  MagicPext.h  Polyglot.cpp  Polyglot.h
src/nn/: CMakeLists.txt  ChessAI.onnx  ChessAIModel.cpp  ChessAIModel.h  ChessAITrainer.cpp  ChessAITrainer.h  ChessAI_BIG.onnx  ChessDataloader.cpp  ChessDataset.h  State0.model  State0.pt  State1.model  State1.pt  State2.model  State2.pt  State3.model  State3.pt  State4.model  State4.pt  dataloaders.py  evalModel.cpp  evalModel.h  libtorch.cpp  model.py  model01.param  model11.param  random.tensor  training.bat  training.py
src/nn/PyChess/: _interactive.py  engine.py  pgn.py  polyglot.py  svg.py  syzygy.py  variant.py
test/: CMakeLists.txt  TestClassicBitBoard.cpp  TestPerfT.cpp
